--- a/index.html
+++ b/index.html
@@ -34,14 +34,22 @@
             <p>Satoru Gojo x fem!reader</p>
             <p style="margin-bottom: -15px;">A collaboration by:</p>
             <p>@Kichuunee & @shiuyalan</p>
-            <button id="to-preface">Next Page</button>
+            <button id="to-syn">Next Page</button>
         </div>
 
         <div id="container-3" class="container-1" style="display: none;">
             <h1>Synopsis</h1>
             <p>A strange stranger asking for a lift and a woman with nicotine addiction. Watch as they both discover that they’re more than a driver and a passenger. This is a once in a lifetime road trip full of joy, confessions, and unplanned destinations in between—oh, and old music!</p>
-            <a href="https://open.spotify.com/playlist/5NlIDXb7ShN3KCIDCRNTuK?si=CfcvX0abTi2XTjRA9SJiXw&pi=a-vnrCnrbARJO8" target="_blank" id="spotify-link" class="spotify-button">
+            <a href="https://open.spotify.com/playlist/5NlIDXb7ShN3KCIDCRNTuK?si=e4V8EzHmQzm1Z8fkhvXGSA&pi=a-yj1qsSNJQVil" target="_blank" id="spotify-link" class="spotify-button">
     🎵 Spotify Playlist</a>
+            <button id="to-preface">Next Page</button>
+        </div>
+
+        <div id="container-6" class="container-1" style="display: none;">
+            <h1>KATA PENGANTAR</h1>
+            <p>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis facilisis massa purus. Vivamus dapibus velit non erat tempor consequat. Ut sed sapien vitae risus lacinia suscipit. Aliquam tempus nunc non gravida consequat. Maecenas sodales sagittis urna, vel laoreet nisi tristique eu. Nulla tempus sem eu arcu scelerisque euismod. Nullam et mi sed lacus placerat consequat eget in odio. Sed quis dolor condimentum dolor auctor tincidunt ut non dolor. Sed sollicitudin posuere eros non porta. Nullam maximus tellus eget consequat condimentum. In viverra pellentesque mauris vitae viverra. Aliquam interdum eros ac mattis sollicitudin. Sed id dapibus lacus. Aliquam id massa massa. Donec convallis pellentesque risus id mattis. Nulla lobortis scelerisque felis eleifend dapibus.
+            </p>
             <button id="to-disclaimer">Next Page</button>
         </div>
 
