--- a/index.html
+++ b/index.html
@@ -39,17 +39,56 @@
 
         <div id="container-3" class="container-1" style="display: none;">
             <h1>Synopsis</h1>
-            <p>A strange stranger asking for a lift and a woman with nicotine addiction. Watch as they both discover that they’re more than a driver and a passenger. This is a once in a lifetime road trip full of joy, confessions, and unplanned destinations in between—oh, and old music!</p>
+            <p>A strange stranger asking for a lift and a woman with nicotine addiction.
+            </p>
+            <p>
+            Watch as they both discover that they’re more than a driver and a passenger.
+            </p>
+            <p>
+            This is a once in a lifetime road trip full of joy, confessions, and unplanned destinations in between—oh, and old music!</p>
             <a href="https://open.spotify.com/playlist/5NlIDXb7ShN3KCIDCRNTuK?si=e4V8EzHmQzm1Z8fkhvXGSA&pi=a-yj1qsSNJQVil" target="_blank" id="spotify-link" class="spotify-button">
     🎵 Spotify Playlist</a>
             <button id="to-preface">Next Page</button>
         </div>
 
         <div id="container-6" class="container-1" style="display: none;">
-            <h1>KATA PENGANTAR</h1>
+            <h1>PREFACE</h1>
+            <div class="scroll-content">
             <p>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis facilisis massa purus. Vivamus dapibus velit non erat tempor consequat. Ut sed sapien vitae risus lacinia suscipit. Aliquam tempus nunc non gravida consequat. Maecenas sodales sagittis urna, vel laoreet nisi tristique eu. Nulla tempus sem eu arcu scelerisque euismod. Nullam et mi sed lacus placerat consequat eget in odio. Sed quis dolor condimentum dolor auctor tincidunt ut non dolor. Sed sollicitudin posuere eros non porta. Nullam maximus tellus eget consequat condimentum. In viverra pellentesque mauris vitae viverra. Aliquam interdum eros ac mattis sollicitudin. Sed id dapibus lacus. Aliquam id massa massa. Donec convallis pellentesque risus id mattis. Nulla lobortis scelerisque felis eleifend dapibus.
+             Two things that kind of defines my childhood are road trips and RL Stine’s Goosebumps.
             </p>
+            <p>
+             Ever since I got back into writing, it has always been a dream of mine to write a story with multiple endings, based on the reader’s choice. Di saat yang sama, aku mau bikin cerita yang fokusnya di emosi manusia yang kadang kompleks, kadang juga simpel apa adanya. I want the pace to be slower than my usual writing, so it’ll be like peeling a tangerine and seeing how the plith is connected to one another, creating an intricate pattern.
+            </p>
+            <p>
+             Tapi, mau cuma sekadar mau. Nggak akan terwujud kalau aku nggak mulai. Makanya, aku beruntung banget punya temen kayak Thames yang mau diajak collab dan bikin website ini sebagai wadah untuk tulisanku. Dia juga yang ngasih aku saran pas aku ragu sama alur ceritanya. Beneran deh, kalo nggak ada dia, ini cerita nggak akan jalan. Nggak akan hidup.
+            </p>
+            <p>
+             Aku juga berterima kasih banget sama Tumini yang mau baca draft berantakanku waktu itu dan ngasih masukan yang oke banget. Ada juga Kak Ayu si jagoanku yang selama ini sering aku mintain saran ini itu dan kali ini jadi orang pertama yang ngetest websitenya.
+            </p>
+            <p>
+            Terakhir, aku juga mau berterima kasih sama kamu yang udah mau baca cerita ini dan menikmati karya kolaborasiku sama Thames! I hope this road trip is to your liking!
+            </p>
+            <p>
+            Jangan lupa isi tellonym-ku dan Thames, ya! 😉
+            </p>
+            <p style="text-align: right;">
+            —Kichuune
+            </p>
+            <hr>
+            <p>
+             I used to think that I would forever feel trapped in programming, completely neglecting my passion of writing. Little did I know, ada kesempatan yang menunggu di ujung jalan untuk menggabungkan keduanya, dan hanya akan menjadi angan-angan kalau bukan karena idenya Kak Une. I wanted to thank her for trusting me in this project.
+            </p>
+            <p>
+             I knew that she put a lot of effort into this work, that's exactly why I felt nervous that I wouldn't be able to provide a proper "vessel" for her masterpiece. If I'm allowed to explain it in website development terms, it's like she's in charge of the backend, and I have to wrap the beautiful code in the frontend. But in the end, we both loved how it turned out. Hopefully, you do too.
+            </p>
+            <p>
+             Banyak saran dan masukan yang membangun dalam pembuatan website ini, baik dari Kak Une dan Kak Ayu sebagai <i>tester</i> pertama. I would like to thank them for their <i>sharp</i> eyes. Also, I want to express my gratitude to all the fellas that showed support for this work, all the kind words (including your future Tello or QRT) meant a lot to us.
+            </p>
+            <p style="text-align: right;">
+            —Thames
+            </p>
+            </div>
             <button id="to-disclaimer">Next Page</button>
         </div>
 
