--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </div>
 
     <div id="main-menu" style="display: none;">
-        <div id="container-1" class:"container">
+      <div id="scroll-container">
+        <div id="container-1" class="container">
             <img src="cover.png" class="moodboard-image"></img>
-            <button id="next-page">Next Page</button>
         </div>
+        <div id="scroll-indicator">⬇</div>
 
-        <div id="container-0" class="container-1" style="display: none;">
+        <div id="container-0" class="container">
             <h1>JOY RIDE</h1>
             <h4>A Jujutsu Kaisen Interactive Fanfiction </h4>
             <p> 1 story, 5 different endings</p>
             <p>Satoru Gojo x fem!reader</p>
             <p style="margin-bottom: -15px;">A collaboration by:</p>
             <p>@Kichuunee & @shiuyalan</p>
-            <button id="to-syn">Next Page</button>
         </div>
 
-        <div id="container-3" class="container-1" style="display: none;">
+        <div id="container-3" class="container-1">
             <h1>Synopsis</h1>
             <p>A strange stranger asking for a lift and a woman with nicotine addiction.
             </p>
@@ -48,10 +48,9 @@
             This is a once in a lifetime road trip full of joy, confessions, and unplanned destinations in between—oh, and old music!</p>
             <a href="https://open.spotify.com/playlist/5NlIDXb7ShN3KCIDCRNTuK?si=e4V8EzHmQzm1Z8fkhvXGSA&pi=a-yj1qsSNJQVil" target="_blank" id="spotify-link" class="spotify-button">
     🎵 Spotify Playlist</a>
-            <button id="to-preface">Next Page</button>
         </div>
 
-        <div id="container-6" class="container-1" style="display: none;">
+        <div id="container-6" class="container-1">
             <h1>PREFACE</h1>
             <div class="scroll-content">
             <p>
@@ -75,6 +74,7 @@
             <p style="text-align: right;">
             —Kichuune
             </p>
+            <a href="https://tellonym.me/kichuunee" target="_blank" class="tellonym-button">Kichuune's Tellonym</a>
             <hr>
             <p>
              I used to think that I would forever feel trapped in programming, completely neglecting my passion of writing. Little did I know, ada kesempatan yang menunggu di ujung jalan untuk menggabungkan keduanya, dan hanya akan menjadi angan-angan kalau bukan karena idenya Kak Une. I wanted to thank her for trusting me in this project.
@@ -88,11 +88,11 @@
             <p style="text-align: right;">
             —Thames
             </p>
+            <a href="https://tellonym.me/sacgwoo" target="_blank" class="tellonym-button">Thames' Tellonym</a>
             </div>
-            <button id="to-disclaimer">Next Page</button>
         </div>
 
-        <div id="container-4" class="container-1" style="display: none;">
+        <div id="container-4" class="container-1">
             <h1>DISCLAIMER</h1>
             <li> HEAVY OOC</li>
             <li>Gojo Satoru belongs to Gege Akutami</li>
@@ -101,19 +101,17 @@
             <li><b>Not for minor</b></li>
             <p>This is a collaboration by @Kichuunee and @shiuyalan. Plagiarism of any kind, including but not limited to copying, pasting, recycling the idea, or reposting the content to another platform without proper attribution and permission is <b>strictly prohibited.</b>
 Please respect our time and effort. If you wish to share this work, please provide a link to this page or properly cite the source.</p>
-            <button id="to-warning">Next Page</button>
         </div>
 
-        <div id="container-5" class="container-1" style="display: none;">
+        <div id="container-5" class="container-1">
             <h1>WARNING</h1>
             <p>This fanfiction may contain <b>mature</b> themes and situations, including but not limited to:</p>
             <p>Mention of trauma, mention of sexual assault, suicidal thoughts and ideation, nicotine addiction, unhealthy coping mechanism, profanities, graphic violence, character death, sexual content, consensual sex, unprotected sex.</p>
             <p>These themes may be disturbing or upsetting to some readers. This fanfiction is intended for <b>mature audiences</b> only and <b>prohibited</b> for readers under the age of 20.</p>
             <p><b>Reader discretion is strongly advised.</b></p>
-            <button id="to-ins">Next Page</button>
         </div>
 
-        <div id="container-2" class="container-1" style="display: none;">
+        <div id="container-2" class="container-1">
             <h1>How to Play</h1>
             <p>1. Baca terlebih dahulu <b>disclaimer</b> dan <b>warning.</b></p>
             <p>2. Baca cerita lalu tentukan pilihanmu dengan hati-hati. Jika sudah memilih, maka kamu tidak akan bisa kembali lagi.</p>
@@ -123,6 +121,7 @@ Please respect our time and effort. If you wish to share this work, please provi
             <p><b>6. Enjoy your road trip!</b></p>
             <button id="start-game">Start</button>
         </div>
+      </div>
     </div>
 
   <div id="app" style="display: none;">
