--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="container-1" class="container">
             <img src="cover.png" class="moodboard-image"></img>
         </div>
-        <div id="scroll-indicator">⬇</div>
+        <div id="scroll-indicator">▽</div>
 
         <div id="container-0" class="container">
             <h1>JOY RIDE</h1>
