--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p style="text-align: right;">
             —Thames
             </p>
-            <a href="https://tellonym.me/sacgwoo" target="_blank" class="tellonym-button">Thames' Tellonym</a>
+            <a href="https://tellonym.me/shiuyalan" target="_blank" class="tellonym-button">Thames' Tellonym</a>
             </div>
         </div>
 
