--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link href="https://db.onlinewebfonts.com/c/b1fc40c9d0f6c4d949b6f3db3c7f4345?family=Seashore" rel="stylesheet"> 
   <link href="https://fonts.cdnfonts.com/css/reborn" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/built-titling" rel="stylesheet">
+  <meta property="og:title" content="Joy Ride">
+  <meta property="og:description" content="A Jujutsu Kaisen Interactive Fanfiction">
+  <meta property="og:image" content="moodboard.jpeg">
+  <meta property="og:url" content="https://joy-ride.vercel.app">
+  <meta property="og:type" content="website">
+  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
+  <link rel="apple-touch-icon" href="apple-icon.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div id="loading-screen">
@@ -88,7 +96,7 @@
             <p style="text-align: right;">
             —Thames
             </p>
-            <a href="https://tellonym.me/shiuyalan" target="_blank" class="tellonym-button">Thames' Tellonym</a>
+            <a href="https://tellonym.me/sacgwoo" target="_blank" class="tellonym-button">Thames' Tellonym</a>
             </div>
         </div>
 
