--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="https://joy-ride.vercel.app">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
+  <link rel="apple-touch-icon" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
