--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link href="https://fonts.cdnfonts.com/css/built-titling" rel="stylesheet">
   <meta property="og:title" content="Joy Ride">
   <meta property="og:description" content="A Jujutsu Kaisen Interactive Fanfiction">
-  <meta property="og:image" content="moodboard.jpeg">
+  <meta property="og:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
   <meta property="og:url" content="https://joy-ride.vercel.app">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
-  <link rel="apple-touch-icon" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
+  <link rel="apple-touch-icon" href="apple-icon.png">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
