--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <meta property="og:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
   <meta property="og:url" content="https://joy-ride.vercel.app">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/32/ce/3a/32ce3ac1c95618ce171ca842044238ed.jpg">
-  <link rel="apple-touch-icon" href="apple-icon.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Joy Ride">
+  <meta name="twitter:description" content="A Jujutsu Kaisen Interactive Fanfiction">
+  <meta name="twitter:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
+  <meta name="twitter:url" content="https://joy-ride.vercel.app">
+  <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/icon.jpg">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
