--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta name="twitter:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
   <meta name="twitter:url" content="https://joy-ride.vercel.app">
   <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/icon.jpg">
+  <link rel="apple-touch-icon" href="https://joy-ride.vercel.app/icon.jpg">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
