--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   <meta name="twitter:description" content="A Jujutsu Kaisen Interactive Fanfiction">
   <meta name="twitter:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
   <meta name="twitter:url" content="https://joy-ride.vercel.app">
-  <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://joy-ride.vercel.app/icon.png">
   <meta name="theme-color" content="#ffffff">
+  <link rel="icon" href="https://joy-ride.vercel.app/icon.ico">
 </head>
 <body>
     <div id="loading-screen">
