--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
   <meta name="twitter:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
   <meta name="twitter:url" content="https://joy-ride.vercel.app">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" href="https://joy-ride.vercel.app/icon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://joy-ride.vercel.app/icon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://joy-ride.vercel.app/icon.png">
-  <link rel="icon" type="image/x-icon" href="https://joy-ride.vercel.app/icon.ico">
-  <link rel="apple-touch-icon" href="https://joy-ride.vercel.app/icon.png">
+  <link rel="icon" type="image/jpg" href="https://joy-ride.vercel.app/icon.jpg">
 </head>
 <body>
     <div id="loading-screen">
