--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link href="https://fonts.cdnfonts.com/css/built-titling" rel="stylesheet">
   <meta property="og:title" content="Joy Ride">
   <meta property="og:description" content="A Jujutsu Kaisen Interactive Fanfiction">
-  <meta property="og:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
+  <meta property="og:image" content="https://joy-ride.vercel.app/thumbnail.png">
   <meta property="og:url" content="https://joy-ride.vercel.app">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Joy Ride">
   <meta name="twitter:description" content="A Jujutsu Kaisen Interactive Fanfiction">
-  <meta name="twitter:image" content="https://joy-ride.vercel.app/moodboard.jpeg">
+  <meta name="twitter:image" content="https://joy-ride.vercel.app/thumbnail.png">
   <meta name="twitter:url" content="https://joy-ride.vercel.app">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/jpg" href="https://joy-ride.vercel.app/icon.jpg">
+  <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/icon.png">
 </head>
 <body>
     <div id="loading-screen">
