--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:image" content="https://joy-ride.vercel.app/thumbnail.png">
   <meta name="twitter:url" content="https://joy-ride.vercel.app">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/icon.png">
+  <link rel="icon" type="image/png" href="https://joy-ride.vercel.app/akore.png">
 </head>
 <body>
     <div id="loading-screen">
